--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Manual validador</title>
 </head>
-<body>
+<body >
     <header class="container pb-pt font-1-l ">
         <span>10:53</span>
         <span>06.10.22</span>
@@ -25,7 +25,7 @@
             <p class="componente font-2-m" >VEÍCULO:<span class="especificacao font-2-s">TSOGAL02</span></p>
             <p class="componente font-2-m" >CATRACA:<span class="especificacao font-2-s">FC-60</span></p>
         </div>
-        <div class="apresente_cartao pb-pt">
+        <div class="apresente_cartao  pb-pt">
             <span class="font-2-xl">Apresente seu cartão</span>
             <span class="font-2-xl">de comando</span>
           <div class="decoracoes">
@@ -34,8 +34,17 @@
             <img src="icons/dec-3.svg" alt="">
           </div>
         </div>
+        <div class="passos font-2-l container">
+            <p>Para iniciar a operação no validador é necessário aproximar
+            o cartão operacional na leitora. 
+            </p>
+            <p>Para iniciarmos a simulação clique no botão abaixo.</p>
+        </div>
+        <div class="btn-container container">
+            <button class="btn iniciar">Iniciar</button>
+        </div>
     </main>
-    <img src="img/teu.png">
+   
     <script src="script/script.js"></script>
     
 </body>
