tela abertura de linha

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>Para iniciarmos a simulação clique no botão abaixo.</p>
         </div>
         <div class="btn-container container">
-            <button class="btn iniciar">Iniciar</button>
+            <a class="btn iniciar" href="abertura.html">Iniciar</a>
         </div>
     </main>
    
