--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Manual validador</title>
 </head>
-<body >
+
+<body>
     <header class="container pb-pt font-1-l ">
         <span>10:53</span>
         <span>06.10.22</span>
     </header>
-    <main class="container">
+    <main class="container" id="home">
         <span class="font-2-xl pb-pt" id="operacao">Operação</span>
         <span class="font-2-xl" id="linha_fechada">Linha Fechada</span>
         <div class="informacoes_ccit">
-            <p class="componente font-2-m" >VERSÃO OS:<span class="especificacao font-2-s">3323</span></p>
-            <p class="componente font-2-m" >ATUALIZAÇÃO:<span class="especificacao font-2-s">06/10/2022 17:17</span></p>
-            <p class="componente font-2-m" >VERSÃO SOFTWARE:<span class="especificacao font-2-s" >4.0.0.797</span></p>
-            <p class="componente font-2-m" >VEÍCULO:<span class="especificacao font-2-s">TSOGAL02</span></p>
-            <p class="componente font-2-m" >CATRACA:<span class="especificacao font-2-s">FC-60</span></p>
+            <p class="componente font-2-m">VERSÃO OS:<span class="especificacao font-2-s">3323</span></p>
+            <p class="componente font-2-m">ATUALIZAÇÃO:<span class="especificacao font-2-s">06/10/2022 17:17</span></p>
+            <p class="componente font-2-m">VERSÃO SOFTWARE:<span class="especificacao font-2-s">4.0.0.797</span></p>
+            <p class="componente font-2-m">VEÍCULO:<span class="especificacao font-2-s">TSOGAL02</span></p>
+            <p class="componente font-2-m">CATRACA:<span class="especificacao font-2-s">FC-60</span></p>
         </div>
         <div class="apresente_cartao  pb-pt">
             <span class="font-2-xl">Apresente seu cartão</span>
             <span class="font-2-xl">de comando</span>
-          <div class="decoracoes">
-            <img src="icons/dec-1.svg" alt="">
-            <img src="icons/dec-2.svg" alt="">
-            <img src="icons/dec-3.svg" alt="">
-          </div>
+            <div class="decoracoes">
+                <img src="icons/dec-1.svg" alt="">
+                <img src="icons/dec-2.svg" alt="">
+                <img src="icons/dec-3.svg" alt="">
+            </div>
         </div>
         <div class="passos font-2-l container">
             <p>Para iniciar a operação no validador é necessário aproximar
-            o cartão operacional na leitora. 
+                o cartão operacional na leitora.
             </p>
             <p>Para iniciarmos a simulação clique no botão abaixo.</p>
         </div>
@@ -44,8 +48,9 @@
             <a class="btn iniciar" href="abertura.html">Iniciar</a>
         </div>
     </main>
-   
+
     <script src="script/script.js"></script>
-    
+
 </body>
+
 </html>
