--- a/selecionar.html
+++ b/selecionar.html
@@ -20,13 +20,13 @@
         <span>06.10.22</span>
     </header>
     <main class="container" id="abertura">
-        <div class="btn-grid">
-            <a href="selecionar.html" class="btn btn-validador">Abertura de linha </a>
+        <div class="btn-grid" id="selecionar">
+            <a class="btn btn-validador">Selecionar linha da lista</a>
+            <a class="btn btn-validador">Digitar código da linha</a>
         </div>
         <div class="passos font-2-l container">
-            <p>Após isso precisamos informar ao validador qual linha iremos abrir.
+            <p>Utilizaremos a opção para Digitar o código da linha.
             </p>
-            <p>Selecione "abertura de linha".</p>
         </div>
         <div class="btn-cancelar container">
             <a class="btn" href="./index.html">Cancelar</a>
