--- a/selecionar.html
+++ b/selecionar.html
@@ -22,7 +22,7 @@
     <main class="container" id="abertura">
         <div class="btn-grid" id="selecionar">
             <a class="btn btn-validador">Selecionar linha da lista</a>
-            <a class="btn btn-validador">Digitar código da linha</a>
+            <a class="btn btn-validador" href="digitar.html">Digitar código da linha</a>
         </div>
         <div class="passos font-2-l container">
             <p>Utilizaremos a opção para Digitar o código da linha.
@@ -32,9 +32,6 @@
             <a class="btn" href="./index.html">Cancelar</a>
         </div>
     </main>
-
-
-
 </body>
 
 </html>
