removido position absolute button

--- a/digitar.html
+++ b/digitar.html
@@ -29,14 +29,14 @@
     </div>
     <main class="container" id="abertura">
         <div class="passos font-2-l container">
-            <p>Iremos abrir a linha 05000, utilize o teclado abaixo.
+            <p>Iremos abrir a linha 05000, digite no teclado abaixo, após isso clique em Confirmar.
             </p>
         </div>
+        <div class="btn-cancelar container">
+            <a class="btn" href="./index.html">Confirmar</a>
+            <a class="btn" href="./index.html">Cancelar</a>
+        </div>
     </main>
-    <div class="btn-cancelar container">
-        <a class="btn" href="./index.html">Confirmar</a>
-        <a class="btn" href="./index.html">Cancelar</a>
-    </div>
     <div class="container container-grid  font-2-l ">
       <div class="grid-1 grid">
         <span>7</span>
