--- a/selecionar.html
+++ b/selecionar.html
@@ -14,14 +14,14 @@
     <title>Manual validador</title>
 </head>
 
-<body>
+<body class="scroll-of">
     <header class="container pb-pt font-1-l ">
         <span>10:53</span>
         <span>06.10.22</span>
     </header>
     <main class="container" id="abertura">
         <div class="btn-grid" id="selecionar">
-            <a class="btn btn-validador">Selecionar linha da lista</a>
+            <a class="btn btn-validador"href="selecionar.html">Selecionar linha da lista</a>
             <a class="btn btn-validador" href="digitar.html">Digitar código da linha</a>
         </div>
         <div class="passos font-2-l container">
