--- a/abertura.html
+++ b/abertura.html
@@ -14,7 +14,7 @@
     <title>Manual validador</title>
 </head>
 
-<body>
+<body class="scroll-of">
     <header class="container pb-pt font-1-l ">
         <span>10:53</span>
         <span>06.10.22</span>
