iniciando tela confirmações

--- a/digitar.html
+++ b/digitar.html
@@ -33,7 +33,7 @@
             </p>
         </div>
         <div class="btn-cancelar container">
-            <a class="btn" href="./index.html">Confirmar</a>
+            <a class="btn confirmar" href="#">Confirmar</a>
             <a class="btn" href="./index.html">Cancelar</a>
         </div>
     </main>
